--- a/src/index.css
+++ b/src/index.css
@@ -14,15 +14,15 @@ html {
 :root {
   /* colors */
   --primary-50: #eff6ff;
-  --primary-100: #dbeafe;
-  --primary-200: #bfdbfe;
-  --primary-300: #93c5fd;
-  --primary-400: #60a5fa;
-  --primary-500: #3b82f6;
-  --primary-600: #2563eb;
-  --primary-700: #1d4ed8;
-  --primary-800: #1e40af;
-  --primary-900: #1e3a8a;
+  --primary-100: #a3d9d4;
+  --primary-200: #7ac8c1;
+  --primary-300: #52b8ae;
+  --primary-400: #29a79b;
+  --primary-500: #009688;
+  --primary-600: #007372;
+  --primary-700: #00665c;
+  --primary-800: #004e47;
+  --primary-900: #003631;
 
   /* grey */
   --grey-50: #f0f4f8;
@@ -323,4 +323,10 @@ ul {
 
 .Toastify__toast {
   text-transform: capitalize;
+}
+
+.logo {
+  margin-top: 2rem;
+  font-weight: 600;
+  color: #009688;
 }
